--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.0.4",
     "@react-pdf/renderer": "^3.1.6",
@@ -16,6 +17,8 @@
     "axios": "^1.3.4",
     "chart.js": "^4.1.2",
     "formik": "^2.4.2",
+    "html-to-image": "^1.11.11",
+    "jspdf": "^2.5.1",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -28,15 +31,18 @@
     "react-toastify": "^9.1.3",
     "react-uuid": "^2.0.0",
     "recharts": "^2.6.2",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
     "bank-account-lookup": "^0.1.19",
     "postcss": "^8.4.24",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
     "vite": "^4.0.0"
   }
